add_library(AppPlayer STATIC src/Utility/DataModelEmptySerialize.cpp src/Script/LuaVMClient.cpp)
add_library(AppStudio STATIC src/Utility/DataModelSerialize.cpp src/Script/LuaVMServer.cpp) 
add_library(AppServer STATIC src/Utility/DataModelSerialize.cpp src/Script/LuaVMServer.cpp)

#################################################
## (0) Tree (ln. 23-36)
## (1) DataModel (ln. 38-486)
## (2) Humanoid (ln. 488-525)
## (3) Tool (ln. 527-588)
## (4) GUI (ln. 590-611)
## (5) Physics World (ln. 617-778)
## (6) Physics Kernel (ln. 784-815)
## (7) Physics Solver (ln. 821-835)
## (8) Lua Core & Bridge (ln. 841-907)
## (9) Lua Game Scripting & VM (ln. 913-956)
## (10) Reflection (ln. 962-978)
## (11) Utility/XML Parser/Security (ln. 984-1236)
## (12) Voxel/Smooth Terrain (ln. 1242-1268)
#################################################

set(SOURCES

  ###################################################################################################################################################
  ###### (0) TREE ###################################################################################################################################
  ###################################################################################################################################################

  src/Tree/EnumProperty.cpp
  src/Tree/EnumProperty.hpp
  src/Tree/Instance.cpp
  src/Tree/Instance.hpp
  src/Tree/Property.cpp
  src/Tree/Property.hpp
  src/Tree/Service.cpp
  src/Tree/Service.hpp
  src/Tree/Verb.cpp
  src/Tree/Verb.hpp

  ###################################################################################################################################################
  ###### (1) DATA MODEL #############################################################################################################################
  ###################################################################################################################################################

  src/DataModel/Accoutrement.cpp
  src/DataModel/Accoutrement.hpp
  src/DataModel/ActionStation.hpp
  src/DataModel/Adornment.cpp
  src/DataModel/Adornment.hpp
  src/DataModel/AdService.cpp
  src/DataModel/AdService.hpp
  src/DataModel/AnimatableRootJoint.cpp
  src/DataModel/AnimatableRootJoint.hpp
  src/DataModel/Animation.cpp
  src/DataModel/Animation.hpp
  src/DataModel/AnimationController.cpp
  src/DataModel/AnimationController.hpp
  src/DataModel/AnimationTrack.cpp
  src/DataModel/AnimationTrack.hpp
  src/DataModel/AnimationTrackState.cpp
  src/DataModel/AnimationTrackState.hpp
  src/DataModel/Animator.cpp
  src/DataModel/Animator.hpp
  src/DataModel/ArcHandles.cpp
  src/DataModel/ArcHandles.hpp
  src/DataModel/AssetService.cpp
  src/DataModel/AssetService.hpp
  src/DataModel/Attachment.cpp
  src/DataModel/Attachment.hpp
  src/DataModel/Backpack.cpp
  src/DataModel/Backpack.hpp
  src/DataModel/BadgeService.cpp
  src/DataModel/BadgeService.hpp
  src/DataModel/BaseRenderJob.cpp
  src/DataModel/BaseRenderJob.hpp
  src/DataModel/BasicPartInstance.cpp
  src/DataModel/BasicPartInstance.hpp
  src/DataModel/BevelMesh.cpp
  src/DataModel/BevelMesh.hpp
  src/DataModel/BillboardGui.cpp
  src/DataModel/BillboardGui.hpp
  src/DataModel/Bindable.cpp
  src/DataModel/Bindable.hpp
  src/DataModel/BlockMesh.cpp
  src/DataModel/BlockMesh.hpp
  src/DataModel/BloomEffect.cpp
  src/DataModel/BloomEffect.hpp
  src/DataModel/BlurEffect.cpp
  src/DataModel/BlurEffect.hpp
  src/DataModel/CacheableContentProvider.hpp
  src/DataModel/Camera.cpp
  src/DataModel/Camera.hpp
  src/DataModel/ChangeHistory.cpp
  src/DataModel/ChangeHistory.hpp
  src/DataModel/CharacterAppearance.cpp
  src/DataModel/CharacterAppearance.hpp
  src/DataModel/CharacterMesh.cpp
  src/DataModel/CharacterMesh.hpp
  src/DataModel/ChatService.cpp
  src/DataModel/ChatService.hpp
  src/DataModel/ChromiumFrame.cpp
  src/DataModel/ChromiumFrame.hpp
  src/DataModel/ClickDetector.cpp
  src/DataModel/ClickDetector.hpp
  src/DataModel/CollectionService.cpp
  src/DataModel/CollectionService.hpp
  src/DataModel/ColorCorrectionEffect.cpp
  src/DataModel/ColorCorrectionEffect.hpp
  src/DataModel/ColorSequence.cpp
  src/DataModel/ColorSequence.hpp
  src/DataModel/Commands.cpp
  src/DataModel/Commands.hpp
  src/DataModel/CommonVerbs.cpp
  src/DataModel/CommonVerbs.hpp
  src/DataModel/Configuration.cpp
  src/DataModel/Configuration.hpp
  src/DataModel/ContentProvider.cpp
  src/DataModel/ContentProvider.hpp
  src/DataModel/ContextActionService.cpp
  src/DataModel/ContextActionService.hpp
  src/DataModel/CornerWedgeInstance.cpp
  src/DataModel/CornerWedgeInstance.hpp
  src/DataModel/CSGDictionaryService.cpp
  src/DataModel/CSGDictionaryService.hpp
  src/DataModel/CSGMesh.cpp
  src/DataModel/CSGMesh.hpp
  src/DataModel/CustomEvent.cpp
  src/DataModel/CustomEvent.hpp
  src/DataModel/CustomEventReceiver.cpp
  src/DataModel/CustomEventReceiver.hpp
  src/DataModel/CustomParticleEmitter.cpp
  src/DataModel/CustomParticleEmitter.hpp
  src/DataModel/CustomParticleEmitter.hpp
  src/DataModel/CylinderMesh.cpp
  src/DataModel/CylinderMesh.hpp
  src/DataModel/DataModel.cpp
  src/DataModel/DataModel.hpp
  src/DataModel/DataModelJob.cpp
  src/DataModel/DataModelJob.hpp
  src/DataModel/DataModelMesh.cpp
  src/DataModel/DataModelMesh.hpp
  src/DataModel/DataStore.cpp
  src/DataModel/DataStore.hpp
  src/DataModel/DataStoreService.cpp
  src/DataModel/DataStoreService.hpp
  src/DataModel/DebrisService.cpp
  src/DataModel/DebrisService.hpp
  src/DataModel/DebugMenu.cpp
  src/DataModel/DebugMenu.cpp
  src/DataModel/DebugSettings.cpp
  src/DataModel/DebugSettings.hpp
  src/DataModel/Decal.cpp
  src/DataModel/Decal.hpp
  src/DataModel/DialogChoice.cpp
  src/DataModel/DialogChoice.hpp
  src/DataModel/DialogRoot.cpp
  src/DataModel/DialogRoot.hpp
  src/DataModel/Effect.cpp
  src/DataModel/Effect.hpp
  src/DataModel/Enums.cpp
  src/DataModel/EventReplicator.hpp
  src/DataModel/Explosion.cpp
  src/DataModel/Explosion.hpp
  src/DataModel/ExtrudedPartInstance.cpp
  src/DataModel/ExtrudedPartInstance.hpp
  src/DataModel/FaceInstance.cpp
  src/DataModel/FaceInstance.hpp
  src/DataModel/factoryregistration.cpp
  src/DataModel/factoryregistration.hpp
  src/DataModel/FastLogSettings.cpp
  src/DataModel/FastLogSettings.hpp
  src/DataModel/Feature.cpp
  src/DataModel/Feature.hpp
  src/DataModel/FileMesh.cpp
  src/DataModel/FileMesh.hpp
  src/DataModel/Filters.cpp
  src/DataModel/Filters.hpp
  src/DataModel/Fire.cpp
  src/DataModel/Fire.hpp
  src/DataModel/Flag.cpp
  src/DataModel/Flag.hpp
  src/DataModel/FlagStand.cpp
  src/DataModel/FlagStand.hpp
  src/DataModel/FloorWire.cpp
  src/DataModel/FloorWire.hpp
  src/DataModel/FlyweightService.cpp
  src/DataModel/FlyweightService.hpp
  src/DataModel/FlyweightService.hpp
  src/DataModel/Folder.cpp
  src/DataModel/Folder.hpp
  src/DataModel/ForceField.cpp
  src/DataModel/ForceField.hpp
  src/DataModel/Frame.cpp
  src/DataModel/Frame.hpp
  src/DataModel/FriendService.cpp
  src/DataModel/FriendService.hpp
  src/DataModel/Game.cpp
  src/DataModel/Game.hpp
  src/DataModel/GameBasicSettings.cpp
  src/DataModel/GameBasicSettings.hpp
  src/DataModel/GamepadService.cpp
  src/DataModel/GamepadService.hpp
  src/DataModel/GamePassService.cpp
  src/DataModel/GamePassService.hpp
  src/DataModel/GameSettings.cpp
  src/DataModel/GameSettings.hpp
  src/DataModel/GeometryService.cpp
  src/DataModel/GeometryService.hpp
  src/DataModel/GlobalSettings.cpp
  src/DataModel/GlobalSettings.hpp
  src/DataModel/GroupService.cpp
  src/DataModel/GroupService.hpp
  src/DataModel/GuiBase.cpp
  src/DataModel/GuiBase.hpp
  src/DataModel/GuiBase2d.cpp
  src/DataModel/GuiBase2d.hpp
  src/DataModel/GuiBase3d.cpp
  src/DataModel/GuiBase3d.hpp
  src/DataModel/GuiCore.hpp
  src/DataModel/GuiLayerCollector.cpp
  src/DataModel/GuiLayerCollector.hpp
  src/DataModel/GuiMixin.hpp
  src/DataModel/GuiObject.cpp
  src/DataModel/GuiObject.hpp
  src/DataModel/GuiService.cpp
  src/DataModel/GuiService.hpp
  src/DataModel/GuiText.hpp
  src/DataModel/Gyro.cpp
  src/DataModel/Gyro.hpp
  src/DataModel/HackDefines.hpp
  src/DataModel/HandleAdornment.cpp
  src/DataModel/HandleAdornment.hpp
  src/DataModel/Handles.cpp
  src/DataModel/Handles.hpp
  src/DataModel/HandlesBase.cpp
  src/DataModel/HandlesBase.hpp
  src/DataModel/HapticService.cpp
  src/DataModel/HapticService.hpp
  src/DataModel/Hint.cpp
  src/DataModel/Hint.hpp
  src/DataModel/Hopper.cpp
  src/DataModel/Hopper.hpp
  src/DataModel/HttpRbxApiService.cpp
  src/DataModel/HttpRbxApiService.hpp
  src/DataModel/HttpService.cpp
  src/DataModel/HttpService.hpp
  src/DataModel/IAnimatableJoint.hpp
  src/DataModel/ICameraOwner.hpp
  src/DataModel/ICharacterSubject.cpp
  src/DataModel/ICharacterSubject.hpp
  src/DataModel/IEquipable.cpp
  src/DataModel/IEquipable.hpp
  src/DataModel/ImageButton.cpp
  src/DataModel/ImageButton.hpp
  src/DataModel/ImageLabel.cpp
  src/DataModel/ImageLabel.hpp
  src/DataModel/IModelModifier.hpp
  src/DataModel/InputObject.cpp
  src/DataModel/InputObject.hpp
  src/DataModel/InsertService.cpp
  src/DataModel/InsertService.hpp
  src/DataModel/JointInstance.cpp
  src/DataModel/JointInstance.hpp
  src/DataModel/JointsService.cpp
  src/DataModel/JointsService.hpp
  src/DataModel/Keyframe.cpp
  src/DataModel/Keyframe.hpp
  src/DataModel/KeyframeSequence.cpp
  src/DataModel/KeyframeSequence.hpp
  src/DataModel/KeyframeSequenceProvider.cpp
  src/DataModel/KeyframeSequenceProvider.hpp
  src/DataModel/legacy.cpp
  src/DataModel/legacy.hpp
  src/DataModel/Light.cpp
  src/DataModel/Light.hpp
  src/DataModel/Lighting.cpp
  src/DataModel/Lighting.hpp
  src/DataModel/LocalWorkspace.cpp
  src/DataModel/LocalWorkspace.hpp
  src/DataModel/LoginService.cpp
  src/DataModel/LoginService.hpp
  src/DataModel/LogService.cpp
  src/DataModel/LogService.hpp
  src/DataModel/ManualJointHelper.cpp
  src/DataModel/ManualJointHelper.hpp
  src/DataModel/MarketplaceService.cpp
  src/DataModel/MarketplaceService.hpp
  src/DataModel/MegaCluster.cpp
  src/DataModel/MegaCluster.hpp
  src/DataModel/MeshContentProvider.hpp
  src/DataModel/MeshPartInstance.cpp
  src/DataModel/MeshPartInstance.hpp
  src/DataModel/Message.cpp
  src/DataModel/Message.hpp
  src/DataModel/ModelInstance.cpp
  src/DataModel/ModelInstance.hpp
  src/DataModel/Mouse.cpp
  src/DataModel/Mouse.hpp
  src/DataModel/MouseCommand.cpp
  src/DataModel/MouseCommand.hpp
  src/DataModel/NonReplicatedCSGDictionaryService.cpp
  src/DataModel/NonReplicatedCSGDictionaryService.hpp
  src/DataModel/NotificationService.cpp
  src/DataModel/NotificationService.hpp
  src/DataModel/NumberRange.cpp
  src/DataModel/NumberRange.hpp
  src/DataModel/NumberSequence.cpp
  src/DataModel/NumberSequence.hpp
  src/DataModel/ParallelRampInstance.cpp
  src/DataModel/ParallelRampInstance.hpp
  src/DataModel/ParametricPartInstance.cpp
  src/DataModel/ParametricPartInstance.hpp
  src/DataModel/PartCookie.cpp
  src/DataModel/PartDragger.hpp
  src/DataModel/PartInstance.cpp
  src/DataModel/PartInstance.hpp
  src/DataModel/PartOperation.cpp
  src/DataModel/PartOperation.hpp
  src/DataModel/PartOperationAsset.cpp
  src/DataModel/PartOperationAsset.hpp
  src/DataModel/PathfindingService.cpp
  src/DataModel/PersonalServerService.cpp
  src/DataModel/PersonalServerService.hpp
  src/DataModel/PhysicsInstructions.cpp
  src/DataModel/PhysicsInstructions.hpp
  src/DataModel/PhysicsService.cpp
  src/DataModel/PhysicsService.hpp
  src/DataModel/PhysicsSettings.cpp
  src/DataModel/PhysicsSettings.hpp
  src/DataModel/Platform.cpp
  src/DataModel/Platform.hpp
  src/DataModel/PlayerGui.cpp
  src/DataModel/PlayerGui.hpp
  src/DataModel/PlayerMouse.cpp
  src/DataModel/PlayerMouse.hpp
  src/DataModel/PlayerScripts.cpp
  src/DataModel/PlayerScripts.hpp
  src/DataModel/PluginManager.cpp
  src/DataModel/PluginManager.hpp
  src/DataModel/PluginMouse.cpp
  src/DataModel/PluginMouse.hpp
  src/DataModel/PointsService.cpp
  src/DataModel/Pose.cpp
  src/DataModel/Pose.hpp
  src/DataModel/PostEffect.cpp
  src/DataModel/PostEffect.hpp
  src/DataModel/Posture.hpp
  src/DataModel/PrismInstance.cpp
  src/DataModel/PrismInstance.hpp
  src/DataModel/PVInstance.cpp
  src/DataModel/PVInstance.hpp
  src/DataModel/PyramidInstance.cpp
  src/DataModel/PyramidInstance.hpp
  src/DataModel/Remote.cpp
  src/DataModel/Remote.hpp
  src/DataModel/RenderHooksService.cpp
  src/DataModel/RenderHooksService.hpp
  src/DataModel/RenderSettingsItem.cpp
  src/DataModel/RenderSettingsItem.hpp
  src/DataModel/ReplicatedFirst.cpp
  src/DataModel/ReplicatedFirst.hpp
  src/DataModel/ReplicatedStorage.cpp
  src/DataModel/ReplicatedStorage.hpp
  src/DataModel/RightAngleRampInstance.cpp
  src/DataModel/RightAngleRampInstance.hpp
  src/DataModel/RobloxReplicatedStorage.cpp
  src/DataModel/RobloxReplicatedStorage.hpp
  src/DataModel/RootInstance.cpp
  src/DataModel/RootInstance.hpp
  src/DataModel/SafeChat.cpp
  src/DataModel/SafeChat.hpp
  src/DataModel/Scale9Frame.cpp
  src/DataModel/Scale9Frame.hpp
  src/DataModel/ScreenGui.cpp
  src/DataModel/ScreenGui.hpp
  src/DataModel/ScriptMouseCommand.cpp
  src/DataModel/ScriptMouseCommand.hpp
  src/DataModel/ScrollingFrame.cpp
  src/DataModel/ScrollingFrame.hpp
  src/DataModel/Seat.cpp
  src/DataModel/Seat.hpp
  src/DataModel/Selection.cpp
  src/DataModel/Selection.hpp
  src/DataModel/SelectionBox.cpp
  src/DataModel/SelectionBox.hpp
  src/DataModel/SelectionLasso.cpp
  src/DataModel/SelectionLasso.hpp
  src/DataModel/SelectionSphere.cpp
  src/DataModel/SelectionSphere.hpp
  src/DataModel/ServerScriptService.cpp
  src/DataModel/ServerScriptService.hpp
  src/DataModel/ServerStorage.cpp
  src/DataModel/ServerStorage.hpp
  src/DataModel/SkateboardController.cpp
  src/DataModel/SkateboardController.hpp
  src/DataModel/SkateboardPlatform.cpp
  src/DataModel/SkateboardPlatform.hpp
  src/DataModel/Sky.cpp
  src/DataModel/Sky.hpp
  src/DataModel/Smoke.cpp
  src/DataModel/Smoke.hpp
  src/DataModel/SocialService.cpp
  src/DataModel/SocialService.hpp
  src/DataModel/SolidModelContentProvider.cpp
  src/DataModel/SolidModelContentProvider.hpp
  src/DataModel/Sparkles.cpp
  src/DataModel/Sparkles.hpp
  src/DataModel/SpawnLocation.cpp
  src/DataModel/SpawnLocation.hpp
  src/DataModel/SpecialMesh.cpp
  src/DataModel/SpecialMesh.hpp
  src/DataModel/StarterPlayerService.cpp
  src/DataModel/StarterPlayerService.hpp
  src/DataModel/Stats.cpp
  src/DataModel/Stats.hpp
  src/DataModel/StudioPluginHost.hpp
  src/DataModel/StudioTool.cpp
  src/DataModel/StudioTool.hpp
  src/DataModel/StudioToolMouseCommand.cpp
  src/DataModel/StudioToolMouseCommand.hpp
  src/DataModel/StudioToolVerb.cpp
  src/DataModel/StudioToolVerb.hpp
  src/DataModel/Surface.cpp
  src/DataModel/Surface.hpp
  src/DataModel/SurfaceGui.cpp
  src/DataModel/SurfaceGui.hpp
  src/DataModel/SurfaceSelection.cpp
  src/DataModel/SurfaceSelection.hpp
  src/DataModel/Team.cpp
  src/DataModel/Team.hpp
  src/DataModel/Teams.cpp
  src/DataModel/Teams.hpp
  src/DataModel/TeleportCallback.hpp
  src/DataModel/TeleportService.cpp
  src/DataModel/TeleportService.hpp
  src/DataModel/TerrainRegion.cpp
  src/DataModel/TerrainRegion.hpp
  src/DataModel/Test.cpp
  src/DataModel/Test.hpp
  src/DataModel/TextBox.cpp
  src/DataModel/TextBox.hpp
  src/DataModel/TextBox.hpp
  src/DataModel/TextButton.cpp
  src/DataModel/TextButton.hpp
  src/DataModel/TextLabel.cpp
  src/DataModel/TextLabel.hpp
  src/DataModel/TextService.cpp
  src/DataModel/TextService.hpp
  src/DataModel/TextureContentProvider.hpp
  src/DataModel/TextureTrail.cpp
  src/DataModel/TextureTrail.hpp
  src/DataModel/ThumbnailGenerator.cpp
  src/DataModel/ThumbnailGenerator.hpp
  src/DataModel/TimerService.cpp
  src/DataModel/TimerService.hpp
  src/DataModel/Tool.cpp
  src/DataModel/Tool.hpp
  src/DataModel/ToolMouseCommand.cpp
  src/DataModel/ToolMouseCommand.hpp
  src/DataModel/ToolsModel.cpp
  src/DataModel/ToolsModel.hpp
  src/DataModel/ToolsPart.cpp
  src/DataModel/ToolsPart.hpp
  src/DataModel/ToolsSurface.cpp
  src/DataModel/ToolsSurface.hpp
  src/DataModel/TouchInputService.cpp
  src/DataModel/TouchInputService.hpp
  src/DataModel/TouchTransmitter.cpp
  src/DataModel/TouchTransmitter.hpp
  src/DataModel/Tween.cpp
  src/DataModel/Tween.hpp
  src/DataModel/TweenBase.cpp
  src/DataModel/TweenBase.hpp
  src/DataModel/TweenService.cpp
  src/DataModel/TweenService.hpp
  src/DataModel/UndoRedo.hpp
  src/DataModel/UserController.cpp
  src/DataModel/UserController.hpp
  src/DataModel/UserInputService.cpp
  src/DataModel/UserInputService.hpp
  src/DataModel/Value.cpp
  src/DataModel/Value.hpp
  src/DataModel/VehicleSeat.cpp
  src/DataModel/VehicleSeat.hpp
  src/DataModel/VideoFrame.cpp
  src/DataModel/VideoFrame.hpp
  src/DataModel/VirtualUser.cpp
  src/DataModel/VirtualUser.hpp
  src/DataModel/Visit.cpp
  src/DataModel/Visit.hpp
  src/DataModel/Workspace.cpp
  src/DataModel/Workspace.hpp

  ###################################################################################################################################################
  ###### (2) HUMANOID ###############################################################################################################################
  ###################################################################################################################################################

  src/Humanoid/Balancing.cpp
  src/Humanoid/Balancing.hpp
  src/Humanoid/FallingDown.cpp
  src/Humanoid/FallingDown.hpp
  src/Humanoid/Flying.cpp
  src/Humanoid/Flying.hpp
  src/Humanoid/Freefall.cpp
  src/Humanoid/Freefall.hpp
  src/Humanoid/GettingUp.cpp
  src/Humanoid/GettingUp.hpp
  src/Humanoid/Humanoid.cpp
  src/Humanoid/Humanoid.hpp
  src/Humanoid/HumanoidState.cpp
  src/Humanoid/HumanoidState.hpp
  src/Humanoid/Jumping.cpp
  src/Humanoid/Jumping.hpp
  src/Humanoid/MovingNoPhysicsBase.cpp
  src/Humanoid/MovingNoPhysicsBase.hpp
  src/Humanoid/Ragdoll.cpp
  src/Humanoid/Ragdoll.hpp
  src/Humanoid/Running.cpp
  src/Humanoid/Running.hpp
  src/Humanoid/RunningBase.cpp
  src/Humanoid/RunningBase.hpp
  src/Humanoid/RunningNoPhysics.cpp
  src/Humanoid/RunningNoPhysics.hpp
  src/Humanoid/Seated.cpp
  src/Humanoid/Seated.hpp
  src/Humanoid/StatusInstance.cpp
  src/Humanoid/StatusInstance.hpp
  src/Humanoid/StrafingNoPhysics.cpp
  src/Humanoid/StrafingNoPhysics.hpp
  src/Humanoid/Swimming.cpp
  src/Humanoid/Swimming.hpp

  ###################################################################################################################################################
  ###### (3) TOOL ###################################################################################################################################
  ###################################################################################################################################################

  src/Tool/AdvDragTool.cpp
  src/Tool/AdvDragTool.hpp
  src/Tool/AdvLuaDragger.cpp
  src/Tool/AdvLuaDragger.hpp
  src/Tool/AdvLuaDragTool.cpp
  src/Tool/AdvLuaDragTool.hpp
  src/Tool/AdvMoveTool.cpp
  src/Tool/AdvMoveTool.hpp
  src/Tool/AdvRotateTool.cpp
  src/Tool/AdvRotateTool.hpp
  src/Tool/AdvRunDragger.cpp
  src/Tool/AdvRunDragger.hpp
  src/Tool/AxisMoveTool.cpp
  src/Tool/AxisMoveTool.hpp
  src/Tool/AxisRotateTool.cpp
  src/Tool/AxisRotateTool.hpp
  src/Tool/CloneTool.cpp
  src/Tool/CloneTool.hpp
  src/Tool/Dragger.cpp
  src/Tool/Dragger.hpp
  src/Tool/DragTool.cpp
  src/Tool/DragTool.hpp
  src/Tool/DragTypes.hpp
  src/Tool/DragUtilities.cpp
  src/Tool/DragUtilities.hpp
  src/Tool/DropTool.cpp
  src/Tool/DropTool.hpp
  src/Tool/GameTool.cpp
  src/Tool/GameTool.hpp
  src/Tool/GrabTool.cpp
  src/Tool/GrabTool.hpp
  src/Tool/GroupDragTool.cpp
  src/Tool/GroupDragTool.hpp
  src/Tool/GroupDropTool.cpp
  src/Tool/GroupDropTool.hpp
  src/Tool/HammerTool.cpp
  src/Tool/HammerTool.hpp
  src/Tool/ICancelableTool.hpp
  src/Tool/LuaDragger.cpp
  src/Tool/LuaDragger.hpp
  src/Tool/LuaDragTool.cpp
  src/Tool/LuaDragTool.hpp
  src/Tool/MegaDragger.cpp
  src/Tool/MegaDragger.hpp
  src/Tool/MoveResizeJoinTool.cpp
  src/Tool/MoveResizeJoinTool.hpp
  src/Tool/NullTool.cpp
  src/Tool/NullTool.hpp
  src/Tool/PartDragTool.cpp
  src/Tool/PartDragTool.hpp
  src/Tool/PartDropTool.cpp
  src/Tool/PartDropTool.hpp
  src/Tool/ResizeTool.cpp
  src/Tool/ResizeTool.hpp
  src/Tool/RunDragger.cpp
  src/Tool/RunDragger.hpp
  src/Tool/ToolsArrow.cpp
  src/Tool/ToolsArrow.hpp

  ###################################################################################################################################################
  ###### (4) GUI ####################################################################################################################################
  ###################################################################################################################################################

  src/GUI/ChatOutput.cpp
  src/GUI/ChatOutput.hpp
  src/GUI/ChatWidget.cpp
  src/GUI/ChatWidget.hpp
  src/GUI/EquationDisplay.cpp
  src/GUI/EquationDisplay.hpp
  src/GUI/GUI.cpp
  src/GUI/GUI.hpp
  src/GUI/GuiDraw.cpp
  src/GUI/GuiDraw.hpp
  src/GUI/GuiEvent.hpp
  src/GUI/Layout.hpp
  src/GUI/ScoreHud.cpp
  src/GUI/ScoreHud.hpp
  src/GUI/Widget.cpp
  src/GUI/Widget.hpp

  ###################################################################################################################################################
  ###### (5) PHYSICS WORLD ##########################################################################################################################
  ###################################################################################################################################################

  src/World/Assembly.cpp
  src/World/Assembly.hpp
  src/World/AssemblyHistory.cpp
  src/World/AssemblyHistory.hpp
  src/World/AssemblyStage.cpp
  src/World/AssemblyStage.hpp
  src/World/Ball.cpp
  src/World/Ball.hpp
  src/World/BallCellContact.cpp
  src/World/BallCellContact.hpp
  src/World/BallPolyContact.cpp
  src/World/BallPolyContact.hpp
  src/World/BasicSpatialHashPrimitive.hpp
  src/World/Block.cpp
  src/World/Block.hpp
  src/World/BlockCorners.hpp
  src/World/BlockMesh.hpp
  src/World/BulletContact.cpp
  src/World/BulletContact.hpp
  src/World/BulletGeometryPoolObjects.cpp
  src/World/BulletGeometryPoolObjects.hpp
  src/World/BulletShapeCellContact.cpp
  src/World/BulletShapeCellContact.hpp
  src/World/BulletShapeContact.cpp
  src/World/BulletShapeContact.hpp
  src/World/Buoyancy.cpp
  src/World/Buoyancy.hpp
  src/World/CellContact.cpp
  src/World/CellContact.hpp
  src/World/CleanStage.cpp
  src/World/CleanStage.hpp
  src/World/Clump.cpp
  src/World/Clump.hpp
  src/World/Contact.cpp
  src/World/Contact.hpp
  src/World/ContactManager.cpp
  src/World/ContactManager.hpp
  src/World/ContactManagerSpatialHash.cpp
  src/World/ContactManagerSpatialHash.hpp
  src/World/ContactStage.cpp
  src/World/ContactStage.hpp
  src/World/Controller.cpp
  src/World/Controller.hpp
  src/World/CornerWedgeMesh.hpp
  src/World/CornerWedgePoly.cpp
  src/World/CornerWedgePoly.hpp
  src/World/Cylinder.cpp
  src/World/Cylinder.hpp
  src/World/DistributedPhysics.hpp
  src/World/Edge.cpp
  src/World/Edge.hpp
  src/World/EdgeBuffer.cpp
  src/World/EdgeBuffer.hpp
  src/World/EdgeStage.cpp
  src/World/EdgeStage.hpp
  src/World/Enum.hpp
  src/World/Feature.cpp
  src/World/Feature.hpp
  src/World/Geometry.hpp
  src/World/GeometryPool.hpp
  src/World/GlueJoint.cpp
  src/World/GlueJoint.hpp
  src/World/GroundStage.cpp
  src/World/GroundStage.hpp
  src/World/HumanoidStage.cpp
  src/World/HumanoidStage.hpp
  src/World/IMoving.cpp
  src/World/IMoving.hpp
  src/World/IPipelined.cpp
  src/World/IPipelined.hpp
  src/World/IWorldStage.cpp
  src/World/IWorldStage.hpp
  src/World/Joint.cpp
  src/World/Joint.hpp
  src/World/JointBuilder.cpp
  src/World/JointBuilder.hpp
  src/World/JointStage.cpp
  src/World/JointStage.hpp
  src/World/KDTree.cpp
  src/World/KDTree.hpp
  src/World/KernelJoint.cpp
  src/World/KernelJoint.hpp
  src/World/MacroTypes.cpp
  src/World/MaterialProperties.cpp
  src/World/Mechanism.cpp
  src/World/Mechanism.hpp
  src/World/MechToAssemblyStage.cpp
  src/World/MechToAssemblyStage.hpp
  src/World/MegaClusterMesh.hpp
  src/World/MegaClusterPoly.cpp
  src/World/MegaClusterPoly.hpp
  src/World/Mesh.cpp
  src/World/Mesh.hpp
  src/World/Motor6DJoint.cpp
  src/World/Motor6DJoint.hpp
  src/World/MotorJoint.cpp
  src/World/MotorJoint.hpp
  src/World/MovingAssemblyStage.cpp
  src/World/MovingAssemblyStage.hpp
  src/World/MovingStage.cpp
  src/World/MovingStage.hpp
  src/World/MultiJoint.hpp
  src/World/MutilJoint.cpp
  src/World/ParallelRampMesh.hpp
  src/World/ParallelRampPoly.cpp
  src/World/ParallelRampPoly.hpp
  src/World/Poly.cpp
  src/World/Poly.hpp
  src/World/PolyCellContact.cpp
  src/World/PolyCellContact.hpp
  src/World/PolyContact.cpp
  src/World/PolyContact.hpp
  src/World/PolyPolyContact.cpp
  src/World/PolyPolyContact.hpp
  src/World/Primitive.cpp
  src/World/Primitive.hpp
  src/World/PrismMesh.hpp
  src/World/PrismPoly.cpp
  src/World/PrismPoly.hpp
  src/World/PyramidMesh.hpp
  src/World/PyramidPoly.cpp
  src/World/PyramidPoly.hpp
  src/World/RightAngleRampMesh.hpp
  src/World/RightAngleRampPoly.cpp
  src/World/RightAngleRampPoly.hpp
  src/World/RigidJoint.cpp
  src/World/RigidJoint.hpp
  src/World/RotateJoint.cpp
  src/World/RotateJoint.hpp
  src/World/SendPhysics.cpp
  src/World/SendPhysics.hpp
  src/World/SimJob.cpp
  src/World/SimJob.hpp
  src/World/SimulateStage.cpp
  src/World/SimulateStage.hpp
  src/World/SleepStage.cpp
  src/World/SleepStage.hpp
  src/World/SmoothClusterGeometry.cpp
  src/World/SmoothClusterGeometry.hpp
  src/World/SnapJoint.cpp
  src/World/SnapJoint.hpp
  src/World/SpatialFilter.cpp
  src/World/SpatialFilter.hpp
  src/World/SpatialHashMultiRes.cpp
  src/World/SpatialHashMultiRes.hpp
  src/World/StepJointsStage.cpp
  src/World/StepJointsStage.hpp
  src/World/SurfaceData.hpp
  src/World/TerrainPartition.cpp
  src/World/TerrainPartition.hpp
  src/World/Tolerance.hpp
  src/World/TreeStage.cpp
  src/World/TreeStage.hpp
  src/World/TriangleMesh.cpp
  src/World/TriangleMesh.hpp
  src/World/WedgeMesh.hpp
  src/World/WedgePoly.cpp
  src/World/WedgePoly.hpp
  src/World/WeldJoint.cpp
  src/World/WeldJoint.hpp
  src/World/World.cpp
  src/World/World.hpp

  ###################################################################################################################################################
  ###### (6) PHYSICS KERNEL #########################################################################################################################
  ###################################################################################################################################################

  src/Kernel/Body.cpp
  src/Kernel/Body.hpp
  src/Kernel/BodyPvSetter.hpp
  src/Kernel/BulletShapeConnectors.cpp
  src/Kernel/BulletShapeConnectors.hpp
  src/Kernel/BuoyancyConnector.cpp
  src/Kernel/BuoyancyConnector.hpp
  src/Kernel/Cofm.cpp
  src/Kernel/Cofm.hpp
  src/Kernel/Connector.cpp
  src/Kernel/Connector.hpp
  src/Kernel/Constants.cpp
  src/Kernel/Constants.hpp
  src/Kernel/ContactConnector.cpp
  src/Kernel/ContactConnector.hpp
  src/Kernel/ContactParams.hpp
  src/Kernel/Debug.hpp
  src/Kernel/IStage.hpp
  src/Kernel/Kernel.cpp
  src/Kernel/Kernel.hpp
  src/Kernel/KernelData.hpp
  src/Kernel/KernelIndex.hpp
  src/Kernel/Link.cpp
  src/Kernel/Link.hpp
  src/Kernel/Pair.cpp
  src/Kernel/Pair.hpp
  src/Kernel/Point.cpp
  src/Kernel/Point.hpp
  src/Kernel/PolyConnectors.cpp
  src/Kernel/PolyConnectors.hpp
  src/Kernel/SimBody.cpp
  src/Kernel/SimBody.hpp

  ###################################################################################################################################################
  ###### (7) PHYSICS SOLVER #########################################################################################################################
  ###################################################################################################################################################

  src/Solver/Constraint.cpp
  src/Solver/Constraint.hpp
  src/Solver/ConstraintJacobian.cpp
  src/Solver/ConstraintJacobian.hpp
  src/Solver/Solver.cpp
  src/Solver/Solver.hpp
  src/Solver/SolverBody.cpp
  src/Solver/SolverBody.hpp
  src/Solver/SolverConfig.cpp
  src/Solver/SolverConfig.hpp
  src/Solver/SolverContainers.hpp
  src/Solver/SolverKernel.cpp
  src/Solver/SolverKernel.hpp
  src/Solver/SolverProfiler.hpp
  src/Solver/SolverSerializer.hpp

  ###################################################################################################################################################
  ###### (8) LUA CORE & BRIDGE ######################################################################################################################
  ###################################################################################################################################################

  src/Lua/lapi.cpp
  src/Lua/lapi.h
  src/Lua/lauxlib.cpp
  src/Lua/lauxlib.h
  src/Lua/lbaselib.cpp
  src/Lua/lbitlib.cpp
  src/Lua/lcode.cpp
  src/Lua/lcode.h
  src/Lua/ldblib.cpp
  src/Lua/ldebug.cpp
  src/Lua/ldebug.h
  src/Lua/ldo.cpp
  src/Lua/ldo.h
  src/Lua/ldump.cpp
  src/Lua/lfunc.cpp
  src/Lua/lfunc.h
  src/Lua/lgc.cpp
  src/Lua/lgc.h
  src/Lua/linit.cpp
  src/Lua/liolib.cpp
  src/Lua/llex.cpp
  src/Lua/llex.h
  src/Lua/llimits.h
  src/Lua/lmathlib.cpp
  src/Lua/lmem.cpp
  src/Lua/lmem.h
  src/Lua/loadlib.cpp
  src/Lua/lobject.cpp
  src/Lua/lobject.h
  src/Lua/lopcodes.cpp
  src/Lua/lopcodes.h
  src/Lua/loslib.cpp
  src/Lua/lparser.cpp
  src/Lua/lparser.h
  src/Lua/lstate.cpp
  src/Lua/lstate.h
  src/Lua/lstring.cpp
  src/Lua/lstring.h
  src/Lua/lstrlib.cpp
  src/Lua/ltable.cpp
  src/Lua/ltable.h
  src/Lua/ltablib.cpp
  src/Lua/ltm.cpp
  src/Lua/ltm.h
  src/Lua/lua.h
  src/Lua/lua.hpp
  src/Lua/LuaBridge.hpp
  src/Lua/luaconf.h
  src/Lua/lualib.h
  src/Lua/lundump.cpp
  src/Lua/lundump.h
  src/Lua/lutf8lib.cpp
  src/Lua/lvm.cpp
  src/Lua/lvm.h
  src/Lua/lzio.cpp
  src/Lua/lzio.h
  src/Lua/print.cpp

  ###################################################################################################################################################
  ###### (9) LUA GAME SCRIPTING & VM ################################################################################################################
  ###################################################################################################################################################

  src/Script/CoreScript.cpp
  src/Script/CoreScript.hpp
  src/Script/DebuggerManager.cpp
  src/Script/DebuggerManager.hpp
  src/Script/ExitHandlers.hpp
  src/Script/IScriptFilter.hpp
  src/Script/LuaArguments.cpp
  src/Script/LuaArguments.hpp
  src/Script/LuaAtomicClasses.cpp
  src/Script/LuaAtomicClasses.hpp
  src/Script/LuaBridge.cpp
  src/Script/LuaCoreFunctions.cpp
  src/Script/LuaCoreFunctions.hpp
  src/Script/LuaEnum.cpp
  src/Script/LuaEnum.hpp
  src/Script/LuaInstanceBridge.cpp
  src/Script/LuaInstanceBridge.hpp
  src/Script/LuaLibrary.cpp
  src/Script/LuaLibrary.hpp
  src/Script/LuaMemory.cpp
  src/Script/LuaMemory.hpp
  src/Script/LuaSettings.cpp
  src/Script/LuaSettings.hpp
  src/Script/LuaSignalBridge.cpp
  src/Script/LuaSignalBridge.hpp
  src/Script/LuaSourceContainer.cpp
  src/Script/LuaSourceContainer.hpp
  src/Script/LuaVM.cpp
  src/Script/LuaVM.hpp
  src/Script/ModuleScript.cpp
  src/Script/ModuleScript.hpp
  src/Script/Script.cpp
  src/Script/script.hpp
  src/Script/ScriptAnalyzer.cpp
  src/Script/ScriptAnalyzer.hpp
  src/Script/ScriptContext.cpp
  src/Script/ScriptContext.hpp
  src/Script/ScriptEvent.cpp
  src/Script/ScriptEvent.hpp
  src/Script/ScriptStats.cpp
  src/Script/ScriptStats.hpp
  src/Script/ThreadRef.cpp
  src/Script/ThreadRef.hpp

  ###################################################################################################################################################
  ###### (10) REFLECTION ############################################################################################################################
  ###################################################################################################################################################

  src/Reflection/Callback.cpp
  src/Reflection/Callback.hpp
  src/Reflection/Descriptor.hpp
  src/Reflection/EnumConverter.hpp
  src/Reflection/Event.cpp
  src/Reflection/Event.hpp
  src/Reflection/Function.hpp
  src/Reflection/Member.hpp
  src/Reflection/Object.hpp
  src/Reflection/Property.hpp
  src/Reflection/Reflection.hpp
  src/Reflection/ReflectionFunction.cpp
  src/Reflection/ReflectionMetadata.cpp
  src/Reflection/ReflectionMetadata.hpp
  src/Reflection/ReflectionObject.cpp
  src/Reflection/ReflectionProperty.cpp
  src/Reflection/Type.cpp
  src/Reflection/Type.hpp
  src/Reflection/YieldFunction.hpp

  ###################################################################################################################################################
  ###### (11) UTILITY/XML PARSER/SECURITY ###########################################################################################################
  ###################################################################################################################################################

  src/Utility/Action.cpp
  src/Utility/Action.hpp
  src/Utility/AnimationId.cpp
  src/Utility/AnimationId.hpp
  src/Utility/AsyncHttpCache.hpp
  src/Utility/AsyncHttpQueue.cpp
  src/Utility/AsyncHttpQueue.hpp
  src/Utility/Average.hpp
  src/Utility/Axes.cpp
  src/Utility/Axes.hpp
  src/Utility/AyaService.cpp
  src/Utility/AyaService.hpp
  src/Utility/base64.hpp
  src/Utility/Base64BinaryInputStream.cpp
  src/Utility/Base64BinaryInputStream.hpp
  src/Utility/Base64BinaryOutputStream.cpp
  src/Utility/Base64BinaryOutputStream.hpp
  src/Utility/BiMultiMap.hpp
  src/Utility/BinaryString.hpp
  src/Utility/BrickColor.cpp
  src/Utility/BrickColor.hpp
  src/Utility/CacheableContentProvider.cpp
  src/Utility/CameraSubject.cpp
  src/Utility/CameraSubject.hpp
  src/Utility/ClusterCellIterator.hpp
  src/Utility/Color.cpp
  src/Utility/Color.hpp
  src/Utility/ComputeProp.hpp
  src/Utility/ConcurrencyValidator.hpp
  src/Utility/ContentFilter.cpp
  src/Utility/ContentFilter.hpp
  src/Utility/ContentId.cpp
  src/Utility/ContentId.hpp
  src/Utility/ContentProviderJob.cpp
  src/Utility/ContentProviderJob.hpp
  src/Utility/ControlledLRUCache.hpp
  src/Utility/CSGKernel.cpp
  src/Utility/CSGKernel.hpp
  src/Utility/Cursors.hpp
  src/Utility/DoubleEndedVector.hpp
  src/Utility/Exception.hpp
  src/Utility/ExponentialRunningAverage.hpp
  src/Utility/Extents.cpp
  src/Utility/Extents.hpp
  src/Utility/ExtentsInt32.hpp
  src/Utility/Face.cpp
  src/Utility/Face.hpp
  src/Utility/Faces.cpp
  src/Utility/Faces.hpp
  src/Utility/FileSystem.hpp
  src/Utility/FileSystemIndependent.cpp
  src/Utility/FixedArray.hpp
  src/Utility/FixedSizeCircularBuffer.hpp
  src/Utility/G3DCore.hpp
  src/Utility/GameMode.hpp
  src/Utility/gpc.cpp
  src/Utility/gpc.hpp
  src/Utility/Guid.cpp
  src/Utility/Guid.hpp
  src/Utility/Handle.cpp
  src/Utility/Handle.hpp
  src/Utility/Hash.cpp
  src/Utility/Hash.hpp
  src/Utility/HeapValue.hpp
  src/Utility/HeartbeatInstance.cpp
  src/Utility/HeartbeatInstance.hpp
  src/Utility/HitTest.cpp
  src/Utility/HitTest.hpp
  src/Utility/HitTestFilter.hpp
  src/Utility/Http.hpp
  src/Utility/HttpAsync.cpp
  src/Utility/HttpAsync.hpp
  src/Utility/HttpAux.hpp
  src/Utility/HttpPlatformImpl.hpp
  src/Utility/IHasLocation.hpp
  src/Utility/IMetric.hpp
  src/Utility/IndexArray.hpp
  src/Utility/IndexBox.cpp
  src/Utility/IndexBox.hpp
  src/Utility/IndexedMesh.cpp
  src/Utility/IndexedMesh.hpp
  src/Utility/IndexedTree.cpp
  src/Utility/IndexedTree.hpp
  src/Utility/InsertMode.hpp
  src/Utility/KeyCode.cpp
  src/Utility/KeyCode.hpp
  src/Utility/KeywordFilter.cpp
  src/Utility/KeywordFilter.hpp
  src/Utility/LegacyContentTable.cpp
  src/Utility/LegacyContentTable.hpp
  src/Utility/LRUCache.hpp
  src/Utility/LuaWebService.cpp
  src/Utility/LuaWebService.hpp
  src/Utility/MachineIdUploader.cpp
  src/Utility/MachineIdUploader.hpp
  src/Utility/Math.cpp
  src/Utility/Math.hpp
  src/Utility/MD5Hasher.cpp
  src/Utility/MD5Hasher.hpp
  src/Utility/MemoryStats.hpp
  src/Utility/MemoryStatsCommon.cpp
  src/Utility/MeshContentProvider.cpp
  src/Utility/MeshId.cpp
  src/Utility/MeshId.hpp
  src/Utility/MicrophoneInput.cpp
  src/Utility/MicrophoneInput.hpp
  src/Utility/MovementHistory.cpp
  src/Utility/MovementHistory.hpp
  src/Utility/Name.cpp
  src/Utility/Name.hpp
  src/Utility/NamedMutex.cpp
  src/Utility/NamedMutex.hpp
  src/Utility/NavKeys.hpp
  src/Utility/NormalId.cpp
  src/Utility/NormalId.hpp
  src/Utility/Object.hpp
  src/Utility/ObscureValue.hpp
  src/Utility/PartMaterial.hpp
  src/Utility/PathInterpolatedCFrame.cpp
  src/Utility/PathInterpolatedCFrame.hpp
  src/Utility/PhysicalProperties.cpp
  src/Utility/PhysicalProperties.hpp
  src/Utility/PhysicsCoord.hpp
  src/Utility/Profiling.cpp
  src/Utility/Profiling.hpp
  src/Utility/ProgressIndicator.hpp
  src/Utility/ProtectedGeneric.hpp
  src/Utility/ProtectedString.cpp
  src/Utility/ProtectedString.hpp
  src/Utility/PV.hpp
  src/Utility/quadedge.cpp
  src/Utility/quadedge.hpp
  src/Utility/Quaternion.cpp
  src/Utility/Quaternion.hpp
  src/Utility/Random.cpp
  src/Utility/Random.hpp
  src/Utility/rbxrandom.cpp
  src/Utility/rbxrandom.hpp
  src/Utility/RbxStringTable.cpp
  src/Utility/RbxStringTable.hpp
  src/Utility/Rect.cpp
  src/Utility/Rect.hpp
  src/Utility/Region2.cpp
  src/Utility/Region2.hpp
  src/Utility/Region3.cpp
  src/Utility/Region3.hpp
  src/Utility/Region3int16.cpp
  src/Utility/Region3Int16.hpp
  src/Utility/Region3int32.cpp
  src/Utility/Region3int32.hpp
  src/Utility/RobloxServicesTools.cpp
  src/Utility/RobloxServicesTools.hpp
  src/Utility/Rotation2d.hpp
  src/Utility/RunningAverageState.cpp
  src/Utility/RunningAverageState.hpp
  src/Utility/RunStateOwner.cpp
  src/Utility/RunStateOwner.hpp
  src/Utility/ScopedAssign.hpp
  src/Utility/ScriptInformationProvider.cpp
  src/Utility/ScriptInformationProvider.hpp
  src/Utility/Selectable.hpp
  src/Utility/Shared/Http.cpp
  src/Utility/Shared/HttpCacheEntry.cpp
  src/Utility/Shared/HttpPlatformImpl.cpp
  src/Utility/SimSendFilter.hpp
  src/Utility/Sound.cpp
  src/Utility/Sound.hpp
  src/Utility/SoundChannel.cpp
  src/Utility/SoundChannel.hpp
  src/Utility/SoundService.cpp
  src/Utility/SoundService.hpp
  src/Utility/SoundWorld.cpp
  src/Utility/SoundWorld.hpp
  src/Utility/SpanningEdge.cpp
  src/Utility/SpanningEdge.hpp
  src/Utility/SpanningNode.cpp
  src/Utility/SpanningNode.hpp
  src/Utility/SpanningTree.cpp
  src/Utility/SpanningTree.hpp
  src/Utility/SpatialRegion.cpp
  src/Utility/SpatialRegion.hpp
  src/Utility/StandardOut.cpp
  src/Utility/StandardOut.hpp
  src/Utility/Statistics.cpp
  src/Utility/Statistics.hpp
  src/Utility/SteppedInstance.cpp
  src/Utility/SteppedInstance.hpp
  src/Utility/StlExtra.hpp
  src/Utility/StreamRegion.cpp
  src/Utility/StreamRegion.hpp
  src/Utility/SurfaceType.hpp
  src/Utility/SystemAddress.cpp
  src/Utility/SystemAddress.hpp
  src/Utility/TextureContentProvider.cpp
  src/Utility/TextureId.hpp
  src/Utility/ThreadPool.cpp
  src/Utility/ThreadPool.hpp
  src/Utility/TouchType.hpp
  src/Utility/TweenInfo.cpp
  src/Utility/TweenInfo.hpp
  src/Utility/UDim.cpp
  src/Utility/UDim.hpp
  src/Utility/UintSet.cpp
  src/Utility/UintSet.hpp
  src/Utility/Units.cpp
  src/Utility/Units.hpp
  src/Utility/URL.cpp
  src/Utility/URL.hpp
  src/Utility/UserInputBase.cpp
  src/Utility/UserInputBase.hpp
  src/Utility/Utilities.cpp
  src/Utility/Utilities.hpp
  src/Utility/VarInt.hpp
  src/Utility/Vector3int32.cpp
  src/Utility/Vector3int32.hpp
  src/Utility/Vector6.hpp
  src/Utility/Velocity.hpp
  src/Utility/VoiceChatOutput.cpp
  src/Utility/VoiceChatOutput.hpp
  src/Utility/xxhash.cpp
  src/Utility/xxhash.hpp

  src/Xml/Reference.hpp
  src/Xml/Serializer.hpp
  src/Xml/SerializerBinary.cpp
  src/Xml/SerializerBinary.hpp
  src/Xml/SerializerV2.cpp
  src/Xml/SerializerV2.hpp
  src/Xml/WebParser.cpp
  src/Xml/WebParser.hpp
  src/Xml/WebSerializer.cpp
  src/Xml/WebSerializer.hpp
  src/Xml/XmlElement.cpp
  src/Xml/XmlElement.hpp
  src/Xml/XmlSerializer.cpp
  src/Xml/XmlSerializer.hpp

  src/Security/ApiSecurity.hpp
  src/Security/FuzzyTokens.cpp
  src/Security/FuzzyTokens.hpp
  src/Security/RandomConstant.hpp
  src/Security/SecurityContext.cpp
  src/Security/SecurityContext.hpp

  ###################################################################################################################################################
  ###### (12) src/Voxel/SMOOTH TERRAIN ##################################################################################################################
  ###################################################################################################################################################

  src/Voxel/AreaCopy.hpp
  src/Voxel/Cell.cpp
  src/Voxel/Cell.hpp
  src/Voxel/CellChangeListener.hpp
  src/Voxel/ChunkMap.hpp
  src/Voxel/Grid.Chunk.cpp
  src/Voxel/Grid.Chunk.hpp
  src/Voxel/Grid.cpp
  src/Voxel/Grid.hpp
  src/Voxel/Region.hpp
  src/Voxel/Serializer.cpp
  src/Voxel/Serializer.hpp
  src/Voxel/Util.cpp
  src/Voxel/Util.hpp
  src/Voxel/Voxelizer.cpp
  src/Voxel/Water.cpp
  src/Voxel/Water.hpp

  src/Voxel2/BitSerializer.hpp
  src/Voxel2/Conversion.hpp
  src/Voxel2/Grid.cpp
  src/Voxel2/Grid.hpp
  src/Voxel2/GridListener.hpp
  src/Voxel2/MaterialTable.cpp
  src/Voxel2/MaterialTable.hpp
  src/Voxel2/Mesher.cpp
  src/Voxel2/Mesher.hpp
)

#################################################### End Sources  ####################################################

target_include_directories(AppPlayer PUBLIC ${THIRD_PARTY_DIR}/BulletPhysics/src ${ENGINE_DIR}/app/src ${ENGINE_DIR}/core/src ${ENGINE_DIR}/network/src PRIVATE ${THIRD_PARTY_DIR}/RakNet/src ${ENGINE_DIR}/3d/src ${ENGINE_DIR}/gfx/src)
target_include_directories(AppStudio PUBLIC ${THIRD_PARTY_DIR}/BulletPhysics/src ${ENGINE_DIR}/app/src ${ENGINE_DIR}/core/src ${ENGINE_DIR}/network/src PRIVATE ${THIRD_PARTY_DIR}/RakNet/src ${ENGINE_DIR}/3d/src ${ENGINE_DIR}/gfx/src)
target_include_directories(AppServer PUBLIC ${THIRD_PARTY_DIR}/BulletPhysics/src ${ENGINE_DIR}/app/src ${ENGINE_DIR}/core/src ${ENGINE_DIR}/network/src PRIVATE ${THIRD_PARTY_DIR}/RakNet/src ${ENGINE_DIR}/3d/src ${ENGINE_DIR}/gfx/src)

set(PRECOMPILED_HEADERS
  src/DataModel/DataModel.hpp
  src/DataModel/PartInstance.hpp
  src/Humanoid/Humanoid.hpp
  src/Reflection/Reflection.hpp
  src/Reflection/YieldFunction.hpp
  src/Tree/Instance.hpp
  src/Utility/ContentFilter.hpp
  src/Utility/G3DCore.hpp
  src/Utility/Http.hpp
  src/Utility/Name.hpp
  src/Utility/Region3.hpp
  src/Utility/StandardOut.hpp
  src/Utility/Utilities.hpp
  src/World/Primitive.hpp

  ${ENGINE_DIR}/core/src/boost.hpp
  ${ENGINE_DIR}/core/src/Countable.hpp
  ${ENGINE_DIR}/core/src/intrusive_ptr_target.hpp
  ${ENGINE_DIR}/core/src/intrusive_weak_ptr.hpp
  ${ENGINE_DIR}/core/src/Log.hpp
  ${ENGINE_DIR}/core/src/RunningAverage.hpp
  ${ENGINE_DIR}/core/src/signal.hpp
  ${ENGINE_DIR}/core/src/TaskScheduler.Job.hpp
  ${ENGINE_DIR}/core/src/threadsafe.hpp
  ${ENGINE_DIR}/core/src/FastLog.hpp
)

target_precompile_headers(AppPlayer PUBLIC ${PRECOMPILED_HEADERS})
target_precompile_headers(AppStudio PUBLIC ${PRECOMPILED_HEADERS})
target_precompile_headers(AppServer PUBLIC ${PRECOMPILED_HEADERS})

target_link_libraries(AppPlayer PRIVATE $<TARGET_OBJECTS:BulletPhysics>)
target_link_libraries(AppStudio PRIVATE $<TARGET_OBJECTS:BulletPhysics>)
target_link_libraries(AppServer PRIVATE $<TARGET_OBJECTS:BulletPhysics>)

#################################################### Platform Configuration ####################################################

if(NOT AYA_OS_ANDROID)
  list(APPEND SOURCES
    src/DataModel/SleepingJob.cpp
    src/DataModel/SleepingJob.hpp
  )
endif()

if(AYA_OS_LINUX OR AYA_OS_MACOS OR AYA_OS_ANDROID)
  list(APPEND SOURCES
    src/Utility/FileSystemIndependent.cpp
    src/Utility/Linux/MemoryStats.cpp
    src/Utility/Linux/MachineIdUploader.cpp
  )

  if(NOT AYA_OS_ANDROID)
    list(APPEND SOURCES src/Utility/Linux/FileSystem.cpp)
  else()
    list(APPEND SOURCES src/Utility/Android/FileSystem.cpp)
  endif()
elseif(AYA_OS_WINDOWS)
  list(APPEND SOURCES
    src/Utility/MemoryStats.cpp
    src/Utility/MemoryStats.hpp
    src/Utility/Windows/FileSystem.cpp
    src/Utility/Windows/MachineIdUploader.cpp
  )
endif()

### ChromiumFrames

if(ENABLE_CHROMIUM_FRAMES)
  list(APPEND SOURCES
    src/Utility/CefIntegration.cpp
    src/Utility/CefIntegration.hpp
  )

  target_link_libraries(AppPlayer PUBLIC ${CEF_WRAPPER})
  target_link_libraries(AppStudio PUBLIC ${CEF_WRAPPER})
  target_link_libraries(AppServer PUBLIC ${CEF_WRAPPER})

  # for delay-load CEF
  if(AYA_OS_WINDOWS)
    target_link_options(AppPlayer PRIVATE "/DELAYLOAD:libcef.dll")
    target_link_options(AppStudio PRIVATE "/DELAYLOAD:libcef.dll")
    target_link_options(AppServer PRIVATE "/DELAYLOAD:libcef.dll")
  endif()
endif()

# Player
if(ENABLE_DISCORD_INTEGRATION)
  target_sources(AppPlayer PRIVATE
    src/Utility/DiscordIntegration.cpp
    src/Utility/DiscordIntegration.hpp
  )
endif()

target_compile_definitions(AppPlayer PUBLIC AYA_PLAYER)

# Studio
target_compile_definitions(AppStudio PUBLIC AYA_STUDIO)
target_compile_definitions(AppStudio PRIVATE LUAVM_COMPILER)

# Server
target_compile_definitions(AppServer PUBLIC AYA_SERVER)
target_compile_definitions(AppServer PRIVATE LUAVM_COMPILER)

target_sources(AppPlayer PRIVATE ${SOURCES})
target_sources(AppStudio PRIVATE ${SOURCES})
target_sources(AppServer PRIVATE ${SOURCES})
